# shopee-live

./: .gitignore  CLAUDE.md  cut.py  main.py  pyproject.toml  requirements.txt
ADB/: __init__.py  core.py
lives/: __init__.py  claim_coin_live.py  core.py
shopee-candy/: main.py  opencv.py
vision/: __init__.py  template_matching.py
